2013-12-04  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-25)

	* Change vignette format from Sweave to knitr
	* Split examples vignette to FOCUS_L and FOCUS_Z
	* Add a starter function for the GUI: gmkin()
	* Remove warning about constant formation fractions in mkinmod
	  as it was based on a misconception

2013-11-06  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-24)

	* Bugfix re-enabling the fixing of any combination of initial values
	  for state variables
	* Default values for kinetic rate constants are not all 0.1 any more
	  but are "salted" with a small increment to avoid numeric artefacts
	  with the eigenvalue based solutions

2013-10-30  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-23)

	* Backtransform fixed ODE parameters for the summary

2013-10-21  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-22)

	* Get rid of the optimisation step in mkinerrmin - this was unnecessary
	  Thanks to KinGUII for the inspiration - actually this is equation 6-2 
	  in FOCUS kinetics p. 91 that I had overlooked originally
	* Fix plot.mkinfit as it passed graphical arguments like main to the solver
	* Do not use plot=TRUE in mkinfit example
	* The first successful fits in the not so simple GUI
	* Fix iteratively reweighted least squares for the case of many metabolites
	* Unify naming of initial values of state variables
	* Unify naming in dataframes of optimised and fixed parameters in the summary
	* Show the weighting method for residuals in the summary
	* Correct the output of the data in the case of manual weighting
	* Implement IRLS assuming different variances for observed variables
	* Do not use 0 values at time zero for chi2 error level calculations.
	  This is the way it is done in KinGUII and it makes sense. It does
	  impact the chi2 error levels in the output. Generally they seem to be
	  lower for metabolites now, presumably because the mean of the observed
	  values is higher
