@@ -3,7 +3,7 @@ Type: Package
 Title: Routines for fitting kinetic models with one or more state
   variables to chemical degradation data
 Version: 0.9-25
-Date: 2014-01-22
+Date: 2014-02-27
 Authors@R: c(person("Johannes", "Ranke", role = c("aut", "cre"), 
                     email = "jranke@uni-bremen.de"),
              person("Katrin", "Lindenberger", role = "ctb"),
@@ -14,7 +14,8 @@ Description: Calculation routines based on the FOCUS Kinetics Report (2006).
   and a choice of the optimisation methods made available by the FME package
   (default is a Levenberg-Marquardt variant).  Please note that no warranty is
   implied for correctness of results or fitness for a particular purpose.
-Depends: FME, deSolve, minpack.lm
+Depends: minpack.lm
+Imports: FME, deSolve
 Suggests: knitr, RUnit, gWidgetsWWW2, RSVGTipsDevice
 License: GPL
 LazyLoad: yes
