@@ -1,10 +1,19 @@
-2013-12-04  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-25)
+2014-02-27  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-25)
 
 	* Change vignette format from Sweave to knitr
 	* Split examples vignette to FOCUS_L and FOCUS_Z
-	* Add a starter function for the GUI: gmkin()
 	* Remove warning about constant formation fractions in mkinmod
 	  as it was based on a misconception
+	* Restrict the unit test with the Schaefer data to parent and primary 
+		metabolites as formation fraction and DT50 for A2 are higly correlated and
+		passing the test is platform dependent. For example, the test fails in 1
+		out of 14 platforms on CRAN as of today.
+	* Add Eurofins Regulatory AG copyright notices
+	* Import FME and deSolve instead of depending on them to have clean startup
+	* Add a starter function for the GUI: gmkin()
+	* Change the format of the workspace files of gmkin so they can be
+	  distributed and documented in the package
+	* Add gmkin workspace datasets FOCUS_2006_gmkin and FOCUS_2006_Z_gmkin
 
 2013-11-06  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-24)
 
